.kustomize/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
spec:
  ingressClassName: nginx
  rules:
  - host: vaultwarden.kopi.quest
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
